--- a/.aigne/doc-smith/config.yaml
+++ b/.aigne/doc-smith/config.yaml
@@ -78,25 +78,10 @@ checkoutId: ""
 
 diagramming:
   effort: 5 # AI effort level for diagramming, 0-10, large is less diagram
-  # Diagram styles: Available visual styles for diagram generation
-  # Available options:
-  #   modern          - Modern, clean, professional style
-  #   standard        - Standard flowchart with traditional symbols
-  #   hand-drawn      - Hand-drawn, sketch-like style
-  #   anthropomorphic - Anthropomorphic style with personified elements
-  #   flat            - Flat design without shadows or 3D effects
-  #   minimalist      - Minimalist style with minimal elements
-  #   3d              - 3D style with three-dimensional effects
-  styles: "anthropomorphic"
-  # Diagram types: Supported diagram types for intelligent type detection (optional)
-  # Available options:
-  #   architecture    - System architecture diagram
-  #   flowchart       - Process flowchart
-  #   guide           - Guide diagram showing user journey
-  #   intro           - Introduction/overview diagram
-  #   sequence        - Sequence diagram showing interactions
-  #   network         - Network topology diagram
-  types: "flowchart"
+  # Default diagram style: The primary style to use when no style is specified in feedback
+  # This style will be applied if feedback doesn't specify a different style
+  # Available options: modern, standard, hand-drawn, anthropomorphic, flat, minimalist, 3d
+  style: "modern"
 
   
 # AI Thinking Configuration
